Модуль 5 задание 1 правка 4 от 22.04.2020

--- a/source/index.html
+++ b/source/index.html
@@ -77,35 +77,51 @@
 
             <li class="bridge">
               <div class="bridge__wrap">
-                <h3 class="bridge__title">Там есть <br> мост дьявола</h3>
+                <h3 class="bridge__title">
+                  <p class="bridge__text1">Там есть</p>
+                  <p class="bridge__text2"> мост дьявола</p>
+                </h3>
                 <span class="bridge__number">– №2 –</span>
                 <p class="bridge__recomendation">Да, по нему можно пройти! Если вы <br>осмелитесь, конечно</p>
               </div>
               <span class="bridge__picture"><img class="bridge__picture1" src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Фотография моста"></span>
             </li>
             <li class="square places">
-              <h3 class="places__title">Небольшая площадь</h3>
-              <span class="places__number">– №3 –</span>
-              <p class="places__recomendation places__recomendation-square">Все интересные <br> места находятся <br>очень близко</p>
+              <div class="places__wrap">
+                <h3 class="places__title">Небольшая площадь</h3>
+                <span class="places__number">– №3 –</span>
+                <p class="places__recomendation">Все интересные места находятся очень близко</p>
+              </div>
             </li>
 
             <li class="road places">
-              <h3 class="places__title">Красивая дорога</h3>
-              <span class="places__number">– №4 –</span>
-              <p class="places__recomendation places__shortrecomendation">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
+              <div class="places__wrap">
+                <h3 class="places__title">Красивая дорога</h3>
+                <span class="places__number">– №4 –</span>
+                <p class="places__shortrecomendation">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </div>
             </li>
 
             <li class="tourists places">
-              <h3 class="places__title">Мало туристов</h3>
-              <span class="places__number">– №5 –</span>
-              <p class="places__recomendation places__tourists-recomendation">Большинство едет <br> в Гранд Каньон<br> и толпится там</p>
+              <div class="places__wrap">
+                <h3 class="places__title">Мало туристов</h3>
+                <span class="places__number">– №5 –</span>
+                <p class="places__recomendation">Большинство едет в Гранд Каньон и толпится там</p>
+              </div>
             </li>
           </ol>
         </section>
 
         <section class="question">
-          <h2 class="question__text">Заинтересовались?</h2>
-          <p class="question__content">Укажите предполагаемые даты<br> поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <div class="question__wrap">
+            <h2 class="question__text">Заинтересовались?</h2>
+            <div class="question__content">
+              <p class="question__content-text1">Укажите предполагаемые даты </p>
+              <p class="question__content-text2">поездки, </p>
+              <p class="question__content-text3">и мы покажем вам лучшие </p>
+              <p class="question__content-text4">предложения гостиниц в Седоне</p>
+            </div>
+          </div>
           <a class="question__search button" href="#">Найти гостиницу</a>
         </section>
 
@@ -139,6 +155,8 @@
         </div>
 
       </footer>
+    </div>
+
     </div>
   </body>
 </html>
