Модуль 5 задание 1 правка 5 от 24.04.2020

--- a/source/photo.html
+++ b/source/photo.html
@@ -63,12 +63,12 @@
               </li>
               <li class="photos-item">
                 <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Фотография кактуса"></a>
-                <div class="photos-item__div-wrap1">
-                  <div class="photos-item__text-wrap1">
+                <div class="photos-item__div-wrap">
+                  <div class="photos-item__text-wrap">
                     <b class="photos-item__title">Местная растительность</b>
                     <p class="photos-item__author">Автор фото: Сергей</p>
                   </div>
-                  <div class="photos-item__positionlikes1">
+                  <div class="photos-item__positionlikes">
                     <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
                     <span class="photos-item__numbers">143</span>
                   </div>
@@ -76,12 +76,12 @@
               </li>
               <li class="photos-item photos-item__road">
                 <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Фотография дороги в горах"></a>
-                <div class="photos-item__div-wrap1">
-                  <div class="photos-item__text-wrap1">
+                <div class="photos-item__div-wrap">
+                  <div class="photos-item__text-wrap">
                     <b class="photos-item__title">Дорога на север</b>
                     <p class="photos-item__author">Автор фото: Петр</p>
                   </div>
-                  <div class="photos-item__positionlikes1">
+                  <div class="photos-item__positionlikes">
                     <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
                     <span class="photos-item__numbers"> 96</span>
                   </div>
@@ -89,12 +89,12 @@
               </li>
               <li class="photos-item">
                 <a class="photos-item__position"><img class="photos-item__picture" src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Фотография моста"></a>
-                <div class="photos-item__div-wrap1">
-                  <div class="photos-item__text-wrap1">
+                <div class="photos-item__div-wrap">
+                  <div class="photos-item__text-wrap">
                     <b class="photos-item__title">Мост дьявола</b>
                     <p class="photos-item__author">Автор фото: Антон</p>
                   </div>
-                  <div  class="photos-item__positionlikes1">
+                  <div  class="photos-item__positionlikes">
                     <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
                     <span class="photos-item__numbers">254</span>
                   </div>
