--- a/source/index.html
+++ b/source/index.html
@@ -45,7 +45,7 @@
           <div class="reasons__position">
             <div class="reasons__index1 reasons--sedona"><img class="reasons__index" src="img/text-sedona-index.svg" width="281" height="214" alt="sedona"></div>
             <p class="reasons__number-zero">Седона – небольшой <br> городок в Аризоне, <br> заслуживающий большего!</p>
-            <p class="reasons__number-one">Рассмотрим 5 причин, по которым <br> Седона круче, чем Градн Каньон!</p>
+            <p class="reasons__number-one">Рассмотрим 5 причин, по которым <br> Седона круче, чем Гранд Каньон!</p>
           </div>
 
           <ol class="reasons-list">
