Модуль 5 задание 1 правка 5 от 25.04.2020

--- a/source/index.html
+++ b/source/index.html
@@ -65,7 +65,12 @@
                   </li>
                   <li class="advantages__souvenires advantages__souvenires--souvenires">
                     <b class="advantages__title">Сувениры</b>
-                    <p class="advantages__description">Не только китайского, но и <br>местного производства</p>
+                    <div class="advantages__description1">
+                      <p class="advantages__description1-text1">Не только китайского,</p>
+                      <p class="advantages__description1-text2">но и </p>
+                      <p class="advantages__description1-text3">местного </p>
+                      <p class="advantages__description1-text4">производства</p>
+                    </div>
                   </li>
                   <li class="advantages__meal advantages__meal--meal">
                     <b class="advantages__title">Еда</b>
