--- a/source/form.html
+++ b/source/form.html
@@ -26,7 +26,13 @@
                 <a href="#">HTML ACADEMY</a>
               </li>
               <li class="site-list__item site-list__item5 site-list__item-down">
-                <a href="index.html"><img class="main-nav__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»"></a>
+                <a href="index.html">
+                  <picture>
+                    <source media="(min-width:1200px)" srcset="img/logo-sedona-desktop.svg">
+                    <source media="(min-width:768px)" srcset="img/logo-sedona-tablet.svg">
+                    <img class="main-nav__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип туристического агенства «Седона»">
+                  </picture>
+                </a>
               </li>
             </ul>
           </div>
