Модуль 6 задание 1 правка 2 от 04.05.2020

--- a/source/form.html
+++ b/source/form.html
@@ -47,7 +47,7 @@
         <section class="form-section">
 
           <div class="form-head">
-            <div class="form-head__position form-head--sedona"><img class="form-head__picture" src="img/text-sedona.svg" width="320" height="158" alt="sedona"></div>
+            <div class="form-head__position form-head--sedona back-sedona"><img class="form-head__picture" src="img/text-sedona.svg" width="320" height="158" alt="sedona"></div>
             <h2 class="form-head__title">Оставьте свой отзыв</h2>
             <p class="form-head__text">Помогите нашим отелям стать лучше!<br>Оставьте отзыв о них, а так же о<br>посещённых вами <br>достопримечательностях</p>
           </div>
