Модуль 8 задание 1 правка 1 от 07.05.2020

--- a/source/form.html
+++ b/source/form.html
@@ -58,11 +58,11 @@
               <legend class="customer__title">Представьтесь:</legend>
               <div class="customer__name">
                 <label for="customer-name-id">Имя<sup>*</sup>:</label>
-                <input type="text" name="customer-name" id="customer-name-id" placeholder="Петр" required>
+                <input type="text" name="customer-name" id="customer-name-id" placeholder="Петр" required="">
               </div>
               <div class="customer__surname">
                 <label for="customer-surname-id">Фамилия<sup>*</sup>:</label>
-                <input type="text" name="customer-surname" id="customer-surname-id" placeholder="Иванов" required>
+                <input type="text" name="customer-surname" id="customer-surname-id" placeholder="Иванов" required="">
               </div>
               <div class="customer__patronymic">
                 <label for="customer-patronymic-id">Отчество:</label>
@@ -72,22 +72,22 @@
 
             <fieldset class="contacts">
               <legend class="contacts__title">Контактная информация:</legend>
-              <div  class="contacts__tel">
+              <div class="contacts__tel">
                 <label for="telephone">Контактный телефон<sup>*</sup>:</label>
                 <br>
-                <input type="tel" name="tel" id="telephone" value="Введите телефон" required>
+                <input type="tel" name="tel" id="telephone" value="Введите телефон" required="">
               </div>
               <div class="contacts__email">
                 <label for="e-mail">Электронная почта<sup>*</sup>:</label>
                 <br>
-                <input type="email" name="email" id="e-mail" value="Введите e-mail" required>
+                <input type="email" name="email" id="e-mail" value="Введите e-mail" required="">
               </div>
             </fieldset>
 
             <fieldset class="radio">
               <legend class="radio__title">Ваше общее впечатление:</legend>
               <div class="radio__one">
-                <input type="radio" name="opinion" id="form-one" checked>
+                <input type="radio" name="opinion" id="form-one" checked="">
                 <label for="form-one">Скорее положительное</label>
               </div>
               <div class="radio__two">
@@ -103,15 +103,15 @@
             <fieldset class="checkbox">
               <legend class="checkbox__title">Посещенные<br>достопримечательности:</legend>
               <div class="checkbox__one">
-                <input type="checkbox" name="check-one" id="one" checked>
+                <input type="checkbox" name="check-one" id="one" checked="">
                 <label for="one">Мост Дьявола</label>
               </div>
               <div class="checkbox__two">
-                <input type="checkbox" name="check-two" id="two" checked>
+                <input type="checkbox" name="check-two" id="two" checked="">
                 <label for="two">Гора-Колокол</label>
               </div>
               <div class="checkbox__three">
-                <input type="checkbox" name="check-three" id="three" checked>
+                <input type="checkbox" name="check-three" id="three" checked="">
                 <label for="three">Слайд-парк</label>
               </div>
               <div class="checkbox__four">
