--- a/source/photo.html
+++ b/source/photo.html
@@ -124,7 +124,7 @@
                     <b class="photos-item__title">Мост дьявола</b>
                     <p class="photos-item__author">Автор фото: Антон</p>
                   </div>
-                  <div  class="photos-item__positionlikes">
+                  <div class="photos-item__positionlikes">
                     <button class="photos-item__likes" type="button"><span class="visually-hidden">Нравится</span></button>
                     <span class="photos-item__numbers">254</span>
                   </div>
@@ -161,5 +161,5 @@
 
       </footer>
 
-  </body>
+  </div></body>
 </html>
