Проект правка 1 от 12.05.2020

--- a/source/form.html
+++ b/source/form.html
@@ -162,6 +162,40 @@
         </div>
 
       </footer>
+
+      <section class="module1">
+        <h2 class="visually-hidden">Предупреждение</h2>
+        <div class="wrap1">
+          <div class="module1__warning">
+            <p class="module1__warning-text1">Что-то пошло </p>
+            <p class="module1__warning-text2"> не так!</p>
+          </div>
+          <div class="module1__content">
+            <p class="module1__content-text1">Проверьте поля, выделенные </p>
+            <p class="module1__content-text2">красным, </p>
+            <p class="module1__content-text3">скорее всего вы </p>
+            <p class="module1__content-text4">забыли их заполнить.</p>
+          </div>
+        </div>
+        <div class="module1__wrap2">
+          <button type="submit" class="button button-module1">Ок</button>
+        </div>
+      </section>
+
+      <section class="module2">
+        <div class="module2__wrap1">
+          <h2 class="module2__text">Ваш отзыв уже отправлен</h2>
+          <div class="module2__content">
+            <p class="module2__content-text1">Спасибо за участие, ваш </p>
+            <p class="module2__content-text2">отзыв уже поступил к нам. </p>
+            <p class="module2__content-text3">В ближайшее время мы </p>
+            <p class="module2__content-text4">опубликуем его на сайте.</p>
+          </div>
+        <div class="module2__wrap2">
+          <button type="submit" class="button button-module2">Закрыть окно</button>
+        </div>
+      </section>
+
     </div>
   </body>
 </html>
