--- a/source/photo.html
+++ b/source/photo.html
@@ -137,6 +137,25 @@
 
         </section>
 
+        <section class="question-photo">
+          <div class="question-photo__wrap">
+            <h2 class="question-photo__text">Всe ещe сомневаетесь?</h2>
+            <div class="question-photo__content">
+              <p class="question-photo__content-text1">Смотрите видеопрезентацию и </p>
+              <p class="question-photo__content-text2">скорее за билетами, пока </p>
+              <p class="question-photo__content-text3"> они не </p>
+              <p class="question-photo__content-text4">подорожали в очередной раз!</p>
+            </div>
+          </div>
+          <div class="video">
+            <video class="video__poster" controls width="320" height="200">
+              <source class="video__content" media="(min-width:1200px)" srcset="img/video-desktop@1x.webp, img/video-desktop@2x.webp 2x">
+              <source class="video__content" media="(min-width:768px)" srcset="img/video-tablet@1x.webp, img/video-tablet@2x.webp 2x">
+              <source class="video__content" src="img/video-mobile-jpg@1x.webp" srcset="img/video-mobile-jpg@2x.webp 2x"  type='video/webm; codecs="vp8, vorbis"'>
+            </video>
+          </div>
+        </section>
+
       </main>
 
       <footer class="footer">
