Проект правка 3 от 13.05.2020

--- a/source/photo.html
+++ b/source/photo.html
@@ -148,11 +148,11 @@
             </div>
           </div>
           <div class="video">
-            <video class="video__poster" controls width="320" height="200">
-              <source class="video__content" media="(min-width:1200px)" srcset="img/video-desktop@1x.webp, img/video-desktop@2x.webp 2x">
-              <source class="video__content" media="(min-width:768px)" srcset="img/video-tablet@1x.webp, img/video-tablet@2x.webp 2x">
-              <source class="video__content" src="img/video-mobile-jpg@1x.webp" srcset="img/video-mobile-jpg@2x.webp 2x"  type='video/webm; codecs="vp8, vorbis"'>
-            </video>
+            <picture>
+              <source media="(min-width:1200px)" srcset="img/video-desktop@1x.jpg, img/video-desktop@2x.jpg 2x">
+              <source media="(min-width:768px)" srcset="img/video-tablet@1x.jpg, img/video-tablet@2x.jpg 2x">
+              <img class="video__picture" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография для видео">
+            </picture>
           </div>
         </section>
 
