--- a/source/form.html
+++ b/source/form.html
@@ -51,7 +51,7 @@
           <div class="form-head">
             <div class="form-head__position form-head--sedona back-sedona"><img class="form-head__picture" src="img/text-sedona.svg" width="320" height="158" alt="sedona"></div>
             <h2 class="form-head__title">Оставьте свой отзыв</h2>
-            <p class="form-head__text">Помогите нашим отелям стать лучше!<br>Оставьте отзыв о них, а так же о<br>посещённых вами <br>достопримечательностях</p>
+            <p class="form-head__text">Помогите нашим отелям стать лучше!<br>Оставьте отзыв о них, а так же о<br>посещенных вами <br>достопримечательностях</p>
           </div>
 
           <form class="form-content" action="https://echo.htmlacademy.ru" method="POST">
@@ -78,17 +78,17 @@
               </div>
             </fieldset>
 
-            <fieldset class="contacts">
+            <fieldset class="contacts contacts--borders">
               <legend class="contacts__title">Контактная информация:</legend>
               <div class="contacts__tel">
-                <label class="contacts__tel-text" for="telephone">Контактный телефон<sup>*</sup>:</label>
+                <label class="contacts__tel-text contacts--tube" for="telephone">Контактный телефон<sup>*</sup>:</label>
                 <br>
                 <div class="contacts__tel-wrap">
                   <input class="contacts__tel-input" type="tel" name="tel" id="telephone" value="Введите телефон" required="">
                 </div>
               </div>
               <div class="contacts__email">
-                <label class="contacts__email-text" for="e-mail">Электронная почта<sup>*</sup>:</label>
+                <label class="contacts__email-text contacts--envelope" for="e-mail">Электронная почта<sup>*</sup>:</label>
                 <br>
                 <div class="contacts__email-wrap">
                   <input class="contacts__email-input" type="email" name="email" id="e-mail" value="Введите e-mail" required="">
@@ -96,47 +96,51 @@
               </div>
             </fieldset>
 
-            <fieldset class="radio">
-              <legend class="radio__title">Ваше общее впечатление:</legend>
-              <div class="radio__one">
-                <input type="radio" name="opinion" id="form-one" checked="">
-                <label for="form-one">Скорее положительное</label>
+            <div class="radio__title">Ваше общее впечатление:</div>
+
+            <fieldset class="radio radio--borders">
+              <legend class="radio__title visually-hidden">Ваше общее впечатление:</legend>
+              <div class="radio__wrap">
+                <input class="radio__input visually-hidden" type="radio" name="opinion" id="form-one" checked="">
+                <label class="radio__label radio--circle" for="form-one">Скорее положительное</label>
               </div>
-              <div class="radio__two">
-                <input type="radio" name="opinion" id="form-two">
-                <label for="form-two">Скорее отрицательное</label>
+              <div class="radio__wrap">
+                <input class="radio__input visually-hidden" type="radio" name="opinion" id="form-two">
+                <label class="radio__label radio--circle" for="form-two">Скорее отрицательное</label>
               </div>
-              <div class="radio__three">
-                <input type="radio" name="opinion" id="form-three">
-                <label for="form-three">Затрудняюсь ответить</label>
+              <div class="radio__wrap">
+                <input class="radio__input visually-hidden" type="radio" name="opinion" id="form-three">
+                <label class="radio__label radio--circle" for="form-three">Затрудняюсь ответить</label>
               </div>
             </fieldset>
 
-            <fieldset class="checkbox">
-              <legend class="checkbox__title">Посещенные<br>достопримечательности:</legend>
-              <div class="checkbox__one">
-                <input type="checkbox" name="check-one" id="one" checked="">
-                <label for="one">Мост Дьявола</label>
+            <div class="checkbox__title">Посещенные<br>достопримечательности:</div>
+
+            <fieldset class="checkbox checkbox--borders">
+              <legend class="checkbox__title visually-hidden">Посещенные<br>достопримечательности:</legend>
+              <div class="checkbox__wrap">
+                <input class="checkbox__input visually-hidden" type="checkbox" name="check-one" id="one" checked="">
+                <label class="checkbox__label checkbox--quadrate" for="one">Мост Дьявола</label>
               </div>
-              <div class="checkbox__two">
-                <input type="checkbox" name="check-two" id="two" checked="">
-                <label for="two">Гора-Колокол</label>
+              <div class="checkbox__wrap">
+                <input class="checkbox__input visually-hidden" type="checkbox" name="check-two" id="two" checked="">
+                <label class="checkbox__label checkbox--quadrate" for="two">Гора-Колокол</label>
               </div>
-              <div class="checkbox__three">
-                <input type="checkbox" name="check-three" id="three" checked="">
-                <label for="three">Слайд-парк</label>
+              <div class="checkbox__wrap">
+                <input class="checkbox__input visually-hidden" type="checkbox" name="check-three" id="three" checked="">
+                <label class="checkbox__label checkbox--quadrate" for="three">Слайд-парк</label>
               </div>
-              <div class="checkbox__four">
-                <input type="checkbox" name="chech-four" id="four">
-                <label for="four">Красные скалы</label>
+              <div class="checkbox__wrap">
+                <input class="checkbox__input visually-hidden" type="checkbox" name="chech-four" id="four">
+                <label class="checkbox__label checkbox--quadrate" for="four">Красные скалы</label>
               </div>
             </fieldset>
 
             <fieldset class="discription">
               <legend class="discription__title">Опишите свои эмоции:</legend>
               <div class="discription__text">
-                <textarea name="comment" class="discription__text" id="comment-field" rows="5" cols="20" placeholder="Опишите подробно все свои восторги"></textarea>
-                <label class="visually-hidden" for="comment-field">Отзыв клиента о поездке</label>
+                <textarea class="discription__comment" name="comment" class="discription__text" id="comment-field" rows="5" cols="20" placeholder="Опишите подробно все свои восторги"></textarea>
+                <label class="dispription__label discription--quadrate" for="comment-field"></label>
               </div>
             </fieldset>
 
