Проект правка 5 от 14.05.2020

--- a/source/form.html
+++ b/source/form.html
@@ -51,7 +51,7 @@
           <div class="form-head">
             <div class="form-head__position form-head--sedona back-sedona"><img class="form-head__picture" src="img/text-sedona.svg" width="320" height="158" alt="sedona"></div>
             <h2 class="form-head__title">Оставьте свой отзыв</h2>
-            <p class="form-head__text">Помогите нашим отелям стать лучше!<br>Оставьте отзыв о них, а так же о<br>посещенных вами <br>достопримечательностях</p>
+            <p class="form-head__text">Помогите нашим отелям стать лучше!<br> Оставьте отзыв о них, а так же о<br>посещенных вами <br>достопримечательностях</p>
           </div>
 
           <form class="form-content" action="https://echo.htmlacademy.ru" method="POST">
@@ -60,21 +60,15 @@
               <legend class="customer__title">Представьтесь:</legend>
               <div class="customer__name">
                 <label class="customer__name-letter" for="customer-name-id">Имя<sup>*</sup>:</label>
-                <div class="customer__name-wrap">
-                  <input class="customer__name-holder" type="text" name="customer-name" id="customer-name-id" placeholder="Петр" required="">
-                </div>
+                <input class="customer__name-holder" type="text" name="customer-name" id="customer-name-id" placeholder="Петр" required="">
               </div>
               <div class="customer__surname">
                 <label class="customer__surname-letter" for="customer-surname-id">Фамилия<sup>*</sup>:</label>
-                <div class="customer__surname-wrap">
-                  <input class="customer__surname-holder"type="text" name="customer-surname" id="customer-surname-id" placeholder="Иванов" required="">
-                </div>
+                <input class="customer__surname-holder"type="text" name="customer-surname" id="customer-surname-id" placeholder="Иванов" required="">
               </div>
               <div class="customer__patronymic">
                 <label class="customer__patronymic-letter" for="customer-patronymic-id">Отчество:</label>
-                <div class="customer__patronymic-wrap">
-                  <input class="customer__patronymic-holder" type="text" name="customer-patronymic" id="customer-patronymic-id" placeholder="Александрович">
-                </div>
+                <input class="customer__patronymic-holder" type="text" name="customer-patronymic" id="customer-patronymic-id" placeholder="Александрович">
               </div>
             </fieldset>
 
@@ -83,23 +77,17 @@
               <div class="contacts__tel">
                 <label class="contacts__tel-text contacts--tube" for="telephone">Контактный телефон<sup>*</sup>:</label>
                 <br>
-                <div class="contacts__tel-wrap">
-                  <input class="contacts__tel-input" type="tel" name="tel" id="telephone" value="Введите телефон" required="">
-                </div>
+                <input class="contacts__tel-input" type="tel" name="tel" id="telephone" value="Введите телефон" required="">
               </div>
               <div class="contacts__email">
                 <label class="contacts__email-text contacts--envelope" for="e-mail">Электронная почта<sup>*</sup>:</label>
                 <br>
-                <div class="contacts__email-wrap">
-                  <input class="contacts__email-input" type="email" name="email" id="e-mail" value="Введите e-mail" required="">
-                </div>
+                <input class="contacts__email-input" type="email" name="email" id="e-mail" value="Введите e-mail" required="">
               </div>
             </fieldset>
 
-            <div class="radio__title">Ваше общее впечатление:</div>
-
             <fieldset class="radio radio--borders">
-              <legend class="radio__title visually-hidden">Ваше общее впечатление:</legend>
+              <legend class="radio__title">Ваше общее впечатление:</legend>
               <div class="radio__wrap">
                 <input class="radio__input visually-hidden" type="radio" name="opinion" id="form-one" checked="">
                 <label class="radio__label radio--circle" for="form-one">Скорее положительное</label>
@@ -114,29 +102,29 @@
               </div>
             </fieldset>
 
-            <div class="checkbox__title">Посещенные<br>достопримечательности:</div>
-
             <fieldset class="checkbox checkbox--borders">
-              <legend class="checkbox__title visually-hidden">Посещенные<br>достопримечательности:</legend>
-              <div class="checkbox__wrap">
-                <input class="checkbox__input visually-hidden" type="checkbox" name="check-one" id="one" checked="">
-                <label class="checkbox__label checkbox--quadrate" for="one">Мост Дьявола</label>
-              </div>
-              <div class="checkbox__wrap">
-                <input class="checkbox__input visually-hidden" type="checkbox" name="check-two" id="two" checked="">
-                <label class="checkbox__label checkbox--quadrate" for="two">Гора-Колокол</label>
-              </div>
-              <div class="checkbox__wrap">
-                <input class="checkbox__input visually-hidden" type="checkbox" name="check-three" id="three" checked="">
-                <label class="checkbox__label checkbox--quadrate" for="three">Слайд-парк</label>
-              </div>
-              <div class="checkbox__wrap">
-                <input class="checkbox__input visually-hidden" type="checkbox" name="chech-four" id="four">
-                <label class="checkbox__label checkbox--quadrate" for="four">Красные скалы</label>
+              <legend class="checkbox__title">Посещенные<br>достопримечательности:</legend>
+              <div class="checkbox__wrap-wrap">
+                <div class="checkbox__wrap">
+                  <input class="checkbox__input visually-hidden" type="checkbox" name="check-one" id="one" checked="">
+                  <label class="checkbox__label checkbox--quadrate" for="one">Мост Дьявола</label>
+                </div>
+                <div class="checkbox__wrap">
+                  <input class="checkbox__input visually-hidden" type="checkbox" name="check-two" id="two" checked="">
+                  <label class="checkbox__label checkbox--quadrate" for="two">Гора-Колокол</label>
+                </div>
+                <div class="checkbox__wrap">
+                  <input class="checkbox__input visually-hidden" type="checkbox" name="check-three" id="three" checked="">
+                  <label class="checkbox__label checkbox--quadrate" for="three">Слайд-парк</label>
+                </div>
+                <div class="checkbox__wrap">
+                  <input class="checkbox__input visually-hidden" type="checkbox" name="chech-four" id="four">
+                  <label class="checkbox__label checkbox--quadrate" for="four">Красные скалы</label>
+                </div>
               </div>
             </fieldset>
 
-            <fieldset class="discription">
+            <fieldset class="discription discription--borders">
               <legend class="discription__title">Опишите свои эмоции:</legend>
               <div class="discription__text">
                 <textarea class="discription__comment" name="comment" class="discription__text" id="comment-field" rows="5" cols="20" placeholder="Опишите подробно все свои восторги"></textarea>
