Проект правка 7 от 15.05.2020

--- a/source/form.html
+++ b/source/form.html
@@ -64,7 +64,7 @@
               </div>
               <div class="customer__surname">
                 <label class="customer__surname-letter" for="customer-surname-id">Фамилия<sup>*</sup>:</label>
-                <input class="customer__surname-holder"type="text" name="customer-surname" id="customer-surname-id" placeholder="Иванов" required="">
+                <input class="customer__surname-holder" type="text" name="customer-surname" id="customer-surname-id" placeholder="Иванов" required="">
               </div>
               <div class="customer__patronymic">
                 <label class="customer__patronymic-letter" for="customer-patronymic-id">Отчество:</label>
@@ -76,7 +76,7 @@
               <legend class="contacts__title">Контактная информация:</legend>
               <div class="contacts__wrap">
                 <div class="contacts__tel">
-                  <label class="contacts__tel-text contacts--tube" for="telephone"><span class="contacts__tel1">Контактный</span><span class="contacts__tel2"></span> телефон<sup>*</sup>:</span></label>
+                  <label class="contacts__tel-text contacts--tube" for="telephone"><span class="contacts__tel1">Контактный</span><span class="contacts__tel2"> телефон<sup>*</sup>:</span></label>
                   <br>
                   <input class="contacts__tel-input" type="tel" name="tel" id="telephone" value="Введите телефон" required="">
                 </div>
@@ -109,19 +109,19 @@
               <div class="checkbox__wrap-wrap">
                 <div class="checkbox__wrap">
                   <input class="checkbox__input visually-hidden" type="checkbox" name="check-one" id="one" checked="">
-                  <label class="checkbox__label checkbox--quadrate" for="one">Мост Дьявола</label>
+                  <label class="checkbox__label checkbox--quadrate checkbox__label1 checkbox--quadrate1" for="one">Мост Дьявола</label>
                 </div>
                 <div class="checkbox__wrap">
                   <input class="checkbox__input visually-hidden" type="checkbox" name="check-two" id="two" checked="">
-                  <label class="checkbox__label checkbox--quadrate" for="two">Гора-Колокол</label>
+                  <label class="checkbox__label checkbox--quadrate checkbox__label2 checkbox--quadrate2" for="two">Гора-Колокол</label>
                 </div>
                 <div class="checkbox__wrap">
                   <input class="checkbox__input visually-hidden" type="checkbox" name="check-three" id="three" checked="">
-                  <label class="checkbox__label checkbox--quadrate" for="three">Слайд-парк</label>
+                  <label class="checkbox__label checkbox--quadrate checkbox__label3 checkbox--quadrate3" for="three">Слайд-парк</label>
                 </div>
                 <div class="checkbox__wrap">
                   <input class="checkbox__input visually-hidden" type="checkbox" name="chech-four" id="four">
-                  <label class="checkbox__label checkbox--quadrate" for="four">Красные скалы</label>
+                  <label class="checkbox__label checkbox--quadrate checkbox__label4 checkbox--quadrate4" for="four">Красные скалы</label>
                 </div>
               </div>
             </fieldset>
@@ -129,7 +129,7 @@
             <fieldset class="discription discription--borders">
               <legend class="discription__title">Опишите свои эмоции:</legend>
               <div class="discription__text">
-                <textarea class="discription__comment" name="comment" class="discription__text" id="comment-field" rows="5" cols="20" placeholder="Опишите подробно все свои восторги"></textarea>
+                <textarea class="discription__comment" name="comment" id="comment-field" rows="5" cols="20" placeholder="Опишите подробно все свои восторги"></textarea>
                 <label class="dispription__label discription--quadrate" for="comment-field"></label>
               </div>
             </fieldset>
