Проект правка 8 от 18.05.2020

--- a/source/index.html
+++ b/source/index.html
@@ -27,7 +27,7 @@
               <li class="site-list__item site-list__item2"><a href="photo.html">Фото и видео</a></li>
               <li class="site-list__item site-list__item3"><a href="form.html">Форма отзыва</a></li>
               <li class="site-list__item site-list__item4 site-list__item--strips">
-                <a href="#">HTML ACADEMY</a>
+                <a href="https://htmlacademy.ru/intensive/adaptive">HTML ACADEMY</a>
               </li>
               <li class="site-list__item site-list__item5 site-list__item-down">
                 <a href="index.html">
@@ -81,11 +81,7 @@
                   <li class="advantages__souvenires advantages__souvenires--souvenires">
                     <b class="advantages__title">Сувениры</b>
                     <div class="advantages__description1">
-                      <p class="advantages__description1-text1">Не только китайского,</p>
-                      <p class="advantages__description1-text2">но и </p>
-                      <p class="advantages__description1-text3">местного </p>
-                      <p class="advantages__description1-text4">производства</p>
-                    </div>
+                      <p class="advantages__description1-text1">Не&nbsp;только&nbsp;китайского, но&nbsp;и местного производства</p>
                   </li>
                   <li class="advantages__meal advantages__meal--meal">
                     <b class="advantages__title">Еда</b>
