--- a/source/photo.html
+++ b/source/photo.html
@@ -19,13 +19,13 @@
           <div class="main-nav__wrapper">
             <button class="main-nav__button" type="button"><span class="visually-hidden">Кнопка меню</span></button>
             <ul class="main-nav__list site-list">
-              <li class="site-list__item site-list__item1 site-list__item--active">
+              <li class="site-list__item site-list__item1">
                 <a href="index.html">Главная</a>
               </li>
-              <li class="site-list__item site-list__item2"><a href="photo.html">Фото и видео</a></li>
+              <li class="site-list__item site-list__item2 site-list__item--active"><a href="photo.html">Фото и видео</a></li>
               <li class="site-list__item site-list__item3"><a href="form.html">Форма отзыва</a></li>
               <li class="site-list__item site-list__item4 site-list__item--strips">
-                <a href="#">HTML ACADEMY</a>
+                <a href="https://htmlacademy.ru/intensive/adaptive">HTML ACADEMY</a>
               </li>
               <li class="site-list__item site-list__item5 site-list__item-down">
                 <a href="index.html">
