Проект правка 9 от 18.05.2020

--- a/source/index.html
+++ b/source/index.html
@@ -82,6 +82,7 @@
                     <b class="advantages__title">Сувениры</b>
                     <div class="advantages__description1">
                       <p class="advantages__description1-text1">Не&nbsp;только&nbsp;китайского, но&nbsp;и местного производства</p>
+                    </div>
                   </li>
                   <li class="advantages__meal advantages__meal--meal">
                     <b class="advantages__title">Еда</b>
