Проект правка 10 от 19.05.2020

--- a/source/index.html
+++ b/source/index.html
@@ -95,11 +95,10 @@
             <li class="bridge">
               <div class="bridge__wrap">
                 <div class="bridge__title">
-                  <p class="bridge__text1">Там есть</p>
-                  <p class="bridge__text2"> мост дьявола</p>
+                  <p class="bridge__text">Там&nbsp;есть мост&nbsp;дьявола</p>
                 </div>
                 <span class="bridge__number">– №2 –</span>
-                <p class="bridge__recomendation">Да, по нему можно пройти! Если вы <br>осмелитесь, конечно</p>
+                <p class="bridge__recomendation">Да, по нему можно пройти! Если вы <br>осмелитесь,&nbsp;конечно</p>
               </div>
               <span class="bridge__picture">
                 <picture>
@@ -139,10 +138,7 @@
           <div class="question__wrap">
             <h2 class="question__text">Заинтересовались?</h2>
             <div class="question__content">
-              <p class="question__content-text1">Укажите предполагаемые даты </p>
-              <p class="question__content-text2">поездки, </p>
-              <p class="question__content-text3">и мы покажем вам лучшие </p>
-              <p class="question__content-text4">предложения гостиниц в Седоне</p>
+              <p class="question__content-text1">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем&nbsp;вам&nbsp;лучшие предложения гостиниц в Седоне</p>
             </div>
           </div>
           <a class="question__search button" href="#">Найти гостиницу</a>
