--- a/source/photo.html
+++ b/source/photo.html
@@ -141,10 +141,7 @@
           <div class="question-photo__wrap">
             <h2 class="question-photo__text">Всe ещe сомневаетесь?</h2>
             <div class="question-photo__content">
-              <p class="question-photo__content-text1">Смотрите видеопрезентацию и </p>
-              <p class="question-photo__content-text2">скорее за билетами, пока </p>
-              <p class="question-photo__content-text3"> они не </p>
-              <p class="question-photo__content-text4">подорожали в очередной раз!</p>
+              <p class="question-photo__content-text1">Смотрите видеопрезентацию&nbsp;и скорее&nbsp;за&nbsp;билетами,&nbsp;пока они&nbsp;не подорожали в очередной&nbsp;раз!</p>
             </div>
           </div>
           <div class="video">
@@ -153,9 +150,22 @@
               <source media="(min-width:768px)" srcset="img/video-tablet@1x.jpg, img/video-tablet@2x.jpg 2x">
               <img class="video__picture" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" width="280" height="280" alt="Фотография для видео">
             </picture>
+            <div class="panel">
+              <div class="panel__wrap">
+                <div class="panel__part1 panel__part1--control">
+                  блок 1
+                </div>
+                <div class="panel__part2">
+                  <div class="panel__replay">
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
+        <div class="test">
 
+        </div>
       </main>
 
       <footer class="footer">
