--- a/source/form.html
+++ b/source/form.html
@@ -171,18 +171,14 @@
         <h2 class="visually-hidden">Предупреждение</h2>
         <div class="wrap1">
           <div class="module1__warning">
-            <p class="module1__warning-text1">Что-то пошло </p>
-            <p class="module1__warning-text2"> не так!</p>
+            <p class="module1__warning-text1">Что-то&nbsp;пошло не&nbsp;так!</p>
           </div>
           <div class="module1__content">
-            <p class="module1__content-text1">Проверьте поля, выделенные </p>
-            <p class="module1__content-text2">красным, </p>
-            <p class="module1__content-text3">скорее всего вы </p>
-            <p class="module1__content-text4">забыли их заполнить.</p>
+            <p class="module1__content-text1">Проверьте&nbsp;поля,&nbsp;выделенные красным, скорее&nbsp;всего&nbsp;вы забыли&nbsp;их&nbsp;заполнить.</p>
           </div>
         </div>
         <div class="module1__wrap2">
-          <button type="submit" class="button-module1">Ок</button>
+          <button type="button" class="button-module1">Ок</button>
         </div>
       </section>
 
@@ -190,14 +186,11 @@
         <div class="module2__wrap1">
           <h2 class="module2__text">Ваш отзыв отправлен!</h2>
           <div class="module2__content">
-            <p class="module2__content-text1">Спасибо за ваше участие, ваш </p>
-            <p class="module2__content-text2">отзыв уже поступил к нам. </p>
-            <p class="module2__content-text3">В ближайшее время мы </p>
-            <p class="module2__content-text4">опубликуем его на сайте.</p>
+            <p class="module2__content-text1">Спасибо&nbsp;за&nbsp;ваше&nbsp;участие,&nbsp;ваш отзыв&nbsp;уже&nbsp;поступил&nbsp;к&nbsp;нам. В&nbsp;ближайшее&nbsp;время&nbsp;мы опубликуем&nbsp;его&nbsp;на&nbsp;сайте.</p>
           </div>
         </div>
         <div class="module2__wrap2">
-          <button type="submit" class="button button-module2">Закрыть окно</button>
+          <button type="button" class="button button-module2">Закрыть окно</button>
         </div>
       </section>
 
